# pyramid-capstone

./: .gitignore  .python-version  404.html  CHANGELOG.md  CONTRIBUTING.rst  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  sitemap.xml  tox.ini
.cursor/rules/: development.mdc
.devcontainer/: Dockerfile  devcontainer.env.example  devcontainer.json  docker-compose.yml  post-install.sh
.github/workflows/: on-release-main.yml  on-release-pypi.yml
docs/: examples.md  getting-started.md  index.md  modules.md  openapi.md  security.md  tutorial.md
examples/: index.html
examples/blog_api/: README.md  __init__.py  app.py  data_store.py  development.ini  models.py  pshell.py  views.py
examples/blog_api/api/: __init__.py
examples/blog_api/api/v1/: apispecview.py
getting-started/: index.html
modules/: index.html
openapi/: index.html
planning/: backlog.md  done.md  general.md  implementation_plan.md
pyramid_capstone/: __init__.py  context.py  decorators.py  exceptions.py  handler.py  inspection.py  schema_generator.py  service_builder.py
pyramid_type_hinted_api/: __init__.py  decorators.py  exceptions.py  handler.py  inspection.py  schema_generator.py  service_builder.py
search/: search_index.json
security/: index.html
tests/: conftest.py  test_context.py  test_inspection.py
tests/integration_tests/: test_basic_functionality.py  test_crud_operations.py  test_parameter_handling.py  test_return_types.py  test_security_policies.py
tests/test_examples/: __init__.py
tests/test_examples/test_blog/: __init__.py  conftest.py  test_categories.py  test_comments.py  test_debug_routes.py  test_health_and_info.py  test_integration_workflow.py  test_openapi_integration.py  test_posts.py  test_route_fixtures_example.py  test_routes_registration.py  test_users.py
tests/unit_tests/: test_context.py  test_decorators.py  test_inspection.py  test_security_integration.py
tutorial/: index.html
